--- a/src/components/Intro/Intropage.css
+++ b/src/components/Intro/Intropage.css
@@ -108,9 +108,10 @@ h6:hover{
     font-weight: 600;
     color: white;
     display: flex ;
-   align-items: center;
+    align-items: center;
     place-content: center;
     place-items: center;
+    text-decoration: none;
 }
 
 .procategory h1:hover{
@@ -120,83 +121,7 @@ h6:hover{
 
 
 
-/* .ethnic{
-    margin-left: 40px;
-    width: 20%;
-    border-radius: 10px;
-    text-align: center;
-    background-image: url("https://static.wixstatic.com/media/11062b_1c9da00489984a55847587fc87f8d520~mv2.jpg/v1/fill/w_980,h_1251,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/11062b_1c9da00489984a55847587fc87f8d520~mv2.jpg");
-}
-.ethnic:hover{
-    transform: scale(1.1);
-    transition: 0.7s;
-} */
 
-/* .ethnicgirl{
-    width: 69%;
-    margin-top: 5px;
-    
-    object-fit: cover;
-    height: 40vh;
-    border-radius: 15px;
-}
-
-.ethnicgirl:hover{
-    transform: scale(1.1);
-    transition: 0.5s;
-}
-
-.ethnic-wear{
-    width: 37%;
-    margin-top: 5px;
-    height: 4vh;
-    font-weight: 700;
-    background-color: white;
-    color: black;
-    border: 1px solid  rgb(250, 247, 247);
-}
-
-.ethnic-wear:hover{
-    background-color: rgb(229, 199, 65);
-    width: 42%;
-    border: 2px solid black;
-    border-radius: 5px;
-    letter-spacing: 1.5px;
-    color: black;
-    transform: scale(1.2);
-    transition: 0.7s;
-    
-} */
-
-/* formals men */
-/* .formalguy{
-    width: 69%;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    margin-left: 69px;
-    object-fit: cover;
-    height: 40vh;
-    border-radius: 15px;
-}
-
-.formal{
-
-    width: 20%;
-    height: 50vh;
-    border-radius: 10px;
-    margin-top: 1px; 
-    margin-left: 30rem; 
-    position: absolute;
-    right: 47rem;
-    top: 52rem;
-    
-    
-    place-content: center;
-    place-items: center;
-    object-fit: cover; 
-    background-color: white;
-    
-}   */
 
 
 /* NOTIFICATION SECTION */
